--- a/introduction.mdx
+++ b/introduction.mdx
@@ -48,7 +48,7 @@ Update your docs to your brand and add valuable content for the best user conver
     Customize your docs to your company's colors and brands
   </Card>
   <Card
-    title="Reference APIs"
+    title="Reference APIs kkkk"
     icon="code"
     href="https://mintlify.com/docs/api-playground/openapi"
   >
