Documentation edits made through Mintlify web editor

--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -1,7 +1,7 @@
 ---
-title: 'Introduction'
-icon: 'discord'
+title: 'Introduction s'
 description: 'Example section for showcasing API endpoints'
+icon: 'discord'
 ---
 
 <Note>
