--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,7 +1,7 @@
 ---
-title: Introduction
+title: Overview
 description: 'Welcome to the home of your new documentation'
-icon: 'discord'
+icon: 'book'
 ---
 
 <img
