--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Quickstart'
 description: 'Start building awesome documentation in under 5 minutes'
-icon: 'terminal'
+icon: 'square-terminal'
 ---
 
 ## Setup your development
